...
import React, { useCallback, useContext } from 'react';
import { createStackNavigator } from '@react-navigation/stack';
import Icon from 'react-native-vector-icons/MaterialIcons';
import Theme from 'presentation/styles/theme';
import AnimalsList from 'presentation/pages/AnimalsList';
import Randomize from 'presentation/pages/Randomize';
import DetailsPage from 'presentation/pages/DetailsPage';
import styled from 'styled-components/native';
import fonts from 'presentation/styles/fonts';
import { BorderlessButton } from 'react-native-gesture-handler';
import { API_CLASS } from '@env';
import { capitalize } from 'utils/stringUtils';

...
    headerTintColor: themePalette.primary,
    headerBackTitle: 'Back',
  };

  const headerRight = useCallback(
    () => (
      <ButtonTheme onPress={toggleLightMode} testID="change-theme-button">
        <Icon
          name="model-training"
          size={fonts.icons.default}
          color={isLightMode ? themePalette.primary : themePalette.black}
        />
      </ButtonTheme>
...
