...
          }}
          resizeMode="cover"
        />
      </Animated.View>
      {API_CLASS === 'POKEMON' && (
        <EyeButton
          testID="shiny-button"
          isLoading={!animal.image}
          onPress={props.toggleShiny}>
          <Icon
            color={themePalette.primary}
            name={'visibility'}
            size={fonts.icons.a}
...
