...
      <Icon name="search" color={themePalette.gray1} size={27} />
      <SearchText
        editable={props.isEditable}
        placeholder={props.placeholder}
        placeholderTextColor={themePalette.gray3}
        ref={ref}
        testID="search-input"
        theme={themePalette}
        value={search}
        onChangeText={onSearch}
        autoCapitalize="none"
      />
      {clearButton}
...
